Added Gallery page and updated index's gallery link button.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="header-img img1">
-      <h2>Harry Thrall Photography</h2>
+      <h2>Parallax Photography</h2>
       <a href="#section1"><i class="fas fa-chevron-down"></i></a>
     </div>
 
@@ -20,7 +20,7 @@
     </section>
 
     <div class="header-img img2">
-      <div class="link-btn"><a href="#">View Gallery</a></div>
+      <a href="gallery.html" class="link-btn"><span>View Gallery</span></a>
     </div>
 
     <section class="text-container">
